--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "#%pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
@@ -89,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "model = Ollama(model=\"llama3.2\")"
    ]
   },
   {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -246,26 +246,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
-      "}\n"
+      "{\"name\": \"add\", \"arguments\": {\"x\": 3, \"y\": 1132}}\n"
      ]
     }
    ],
    "source": [
-    "chain = prompt | model\n",
-    "message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
+    "from langchain_community.llms.ollama import OllamaEndpointNotFoundError\n",
     "\n",
-    "# Let's take a look at the output from the model\n",
-    "# if the model is an LLM (not a chat model), the output will be a string.\n",
-    "if isinstance(message, str):\n",
-    "    print(message)\n",
-    "else:  # Otherwise it's a chat model\n",
-    "    print(message.content)"
+    "chain = prompt | model\n",
+    "try:\n",
+    "    message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
+    "\n",
+    "    # Let's take a look at the output from the model\n",
+    "    # if the model is an LLM (not a chat model), the output will be a string.\n",
+    "    if isinstance(message, str):\n",
+    "        print(message)\n",
+    "    else:  # Otherwise it's a chat model\n",
+    "        print(message.content)\n",
+    "except OllamaEndpointNotFoundError:\n",
+    "    print(\"Error: Please ensure Ollama is running and the phi3 model is installed.\")\n",
+    "    print(\"Try running: ollama pull phi3\")"
    ]
   },
   {
@@ -280,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -449,11 +449,11 @@
      "data": {
       "text/plain": [
        "{'name': 'multiply',\n",
-       " 'arguments': {'x': 13, 'y': 4.14137281},\n",
+       " 'arguments': {'x': '13', 'y': '4.14137281'},\n",
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "langchain_env",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
