lab-tools-prompting

--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -19,7 +19,7 @@
     "\n",
     ":::{.callout-caution}\n",
     "\n",
-    "Some models have been fine-tuned for tool calling and provide a dedicated API for tool calling. Generally, such models are better at tool calling than non-fine-tuned models, and are recommended for use cases that require tool calling. Please see the [how to use a chat model to call tools](/docs/how_to/tool_calling) guide for more information.\n",
+    "Some models have been fine-tuned for tool calling and provide a dedicated API for tool calling. Generally, such models are better at tool calling than non-fine-tuned models, and are recommended for use cases that require tool calling. Please see the [how to use a chat model to call tools](https://python.langchain.com/docs/how_to/tool_calling/) guide for more information.\n",
     "\n",
     "In this guide, we'll see how to add **ad-hoc** tool calling support to a chat model. This is an alternative method to invoke tools if you're using a model that does not natively support tool calling.\n",
     "\n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
@@ -59,16 +59,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "416da17c",
+   "metadata": {},
+   "source": [
+    "smith.langchain.com    ===    api key: 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"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
     "import getpass\n",
     "import os\n",
-    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
    ]
   },
   {
@@ -76,7 +84,7 @@
    "id": "7ec6409b-21e5-4d0a-8a46-c4ef0b055dd3",
    "metadata": {},
    "source": [
-    "You can select any of the given models for this how-to guide. Keep in mind that most of these models already [support native tool calling](/docs/integrations/chat/), so using the prompting strategy shown here doesn't make sense for these models, and instead you should follow the [how to use a chat model to call tools](/docs/how_to/tool_calling) guide.\n",
+    "You can select any of the given models for this how-to guide. Keep in mind that most of these models already [support native tool calling](https://python.langchain.com/docs/integrations/chat), so using the prompting strategy shown here doesn't make sense for these models, and instead you should follow the [how to use a chat model to call tools](https://python.langchain.com/docs/how_to/tool_calling/) guide.\n",
     "\n",
     "```{=mdx}\n",
     "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
@@ -84,12 +92,12 @@
     "<ChatModelTabs openaiParams={`model=\"gpt-4\"`} />\n",
     "```\n",
     "\n",
-    "To illustrate the idea, we'll use `phi3` via Ollama, which does **NOT** have native support for tool calling. If you'd like to use `Ollama` as well follow [these instructions](/docs/integrations/chat/ollama/)."
+    "To illustrate the idea, we'll use `phi3` via Ollama, which does **NOT** have native support for tool calling. If you'd like to use `Ollama` as well follow [these instructions](https://python.langchain.com/docs/integrations/chat/ollama)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
@@ -106,30 +114,15 @@
    "source": [
     "## Create a tool\n",
     "\n",
-    "First, let's create an `add` and `multiply` tools. For more information on creating custom tools, please see [this guide](/docs/how_to/custom_tools)."
+    "First, let's create an `add` and `multiply` tools. For more information on creating custom tools, please see [this guide](https://python.langchain.com/docs/how_to/custom_tools/)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--\n",
-      "multiply\n",
-      "Multiply two numbers together.\n",
-      "{'x': {'title': 'X', 'type': 'number'}, 'y': {'title': 'Y', 'type': 'number'}}\n",
-      "--\n",
-      "add\n",
-      "Add two numbers.\n",
-      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.tools import tool\n",
     "\n",
@@ -158,21 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "be77e780",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "multiply.invoke({\"x\": 4, \"y\": 5})"
    ]
@@ -189,19 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "multiply(x: float, y: float) -> float - Multiply two numbers together.\n",
-      "add(x: int, y: int) -> int - Add two numbers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -213,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,24 +211,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chain = prompt | model\n",
     "message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
@@ -280,21 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "\n",
@@ -330,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,21 +326,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "invoke_tool({\"name\": \"multiply\", \"arguments\": {\"x\": 3, \"y\": 5}})"
    ]
@@ -409,21 +346,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "53.83784653"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
     "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
@@ -441,23 +367,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'multiply',\n",
-       " 'arguments': {'x': 13, 'y': 4.14137281},\n",
-       " 'output': 53.83784653}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.runnables import RunnablePassthrough\n",
     "\n",
@@ -483,11 +396,176 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cabf40b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "\n",
+    "@tool\n",
+    "def subtract(x: int, y: int) -> int:\n",
+    "    \"Subtract two numbers.\"\n",
+    "    return x - y\n",
+    "\n",
+    "tools = [multiply, add, subtract, divide]\n",
+    "\n",
+    "rendered_tools = render_text_description(tools)\n",
+    "print(rendered_tools)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "631726ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = f\"\"\"\\\n",
+    "You are an assistant that has access to the following set of tools.\n",
+    "Here are the names and descriptions for each tool:\n",
+    "\n",
+    "{rendered_tools}\n",
+    "\n",
+    "Given the user input, return the name and input of the tool to use.\n",
+    "Return your response as a JSON blob with 'name' and 'arguments' keys.\n",
+    "\n",
+    "The `arguments` should be a dictionary, with keys corresponding\n",
+    "to the argument names and the values corresponding to the requested values.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0faa985",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [(\"system\", system_prompt), (\"user\", \"{input}\")]\n",
+    ")\n",
+    "\n",
+    "chain = prompt | model | JsonOutputParser() | RunnablePassthrough.assign(\n",
+    "    output=invoke_tool\n",
+    ")\n",
+    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})\n",
+    "\n",
+    "message = chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})\n",
+    "if isinstance(message, str):\n",
+    "    print(message)\n",
+    "else:  # Otherwise it's a chat model\n",
+    "    print(message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd7039a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ...existing code...\n",
+    "\n",
+    "# Few-shot examples\n",
+    "few_shot_examples = [\n",
+    "    {\"input\": \"what's 2 plus 2\", \"output\": {\"name\": \"add\", \"arguments\": {\"x\": 2, \"y\": 2}}},\n",
+    "    {\"input\": \"multiply 3 and 4\", \"output\": {\"name\": \"multiply\", \"arguments\": {\"x\": 3, \"y\": 4}}},\n",
+    "]\n",
+    "\n",
+    "# Update the prompt to include few-shot examples\n",
+    "few_shot_prompt = system_prompt + \"\\n\\nHere are some examples:\\n\"\n",
+    "for example in few_shot_examples:\n",
+    "    few_shot_prompt += f\"User: {example['input']}\\nAssistant: {example['output']}\\n\"\n",
+    "\n",
+    "# Include the 'name' variable in the user message\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [(\"system\", few_shot_prompt), (\"user\", \"{input}\")]\n",
+    ")\n",
+    "\n",
+    "# Error handling\n",
+    "def invoke_tool_with_error_handling(tool_call_request: ToolCallRequest, config: Optional[RunnableConfig] = None):\n",
+    "    try:\n",
+    "        return invoke_tool(tool_call_request, config)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        correction_prompt = f\"An error occurred: {e}. Please correct your previous output.\"\n",
+    "        correction_chain = prompt | model | JsonOutputParser()\n",
+    "        correction_message = correction_chain.invoke({\"input\": correction_prompt, \"name\": \"your_name\"})\n",
+    "        return correction_message\n",
+    "\n",
+    "# Update the chain to use the new invoke_tool_with_error_handling function\n",
+    "chain = (\n",
+    "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool_with_error_handling)\n",
+    ")\n",
+    "\n",
+    "# Test the updated chain with the required 'name' variable\n",
+    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\", \"name\": \"your_name\"})\n",
+    "# ...existing code...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0b9f663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Few-shot examples\n",
+    "few_shot_examples = [\n",
+    "    {\"input\": \"what's 2 plus 2\", \"output\": {\"name\": \"add\", \"arguments\": {\"x\": 2, \"y\": 2}}},\n",
+    "    {\"input\": \"multiply 3 and 4\", \"output\": {\"name\": \"multiply\", \"arguments\": {\"x\": 3, \"y\": 4}}},\n",
+    "]\n",
+    "\n",
+    "## Update the prompt to include few-shot examples and the 'name' variable\n",
+    "few_shot_prompt = system_prompt + \"\\n\\nHere are some examples:\\n\"\n",
+    "for example in few_shot_examples:\n",
+    "    few_shot_prompt += f\"User: {example['input']}\\nAssistant: {example['output']}\\n\"\n",
+    "\n",
+    "# Include the 'name' variable in the prompt template\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [(\"system\", few_shot_prompt), (\"user\", \"{input}\"), (\"name\", \"{name}\")]\n",
+    ")\n",
+    "\n",
+    "# Error handling\n",
+    "def invoke_tool_with_error_handling(tool_call_request: ToolCallRequest, config: Optional[RunnableConfig] = None):\n",
+    "    try:\n",
+    "        return invoke_tool(tool_call_request, config)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        correction_prompt = f\"An error occurred: {e}. Please correct your previous output.\"\n",
+    "        correction_chain = prompt | model | JsonOutputParser()\n",
+    "        correction_message = correction_chain.invoke({\"input\": correction_prompt, \"name\": \"your_name\"})\n",
+    "        return correction_message\n",
+    "\n",
+    "# Update the chain to use the new invoke_tool_with_error_handling function\n",
+    "chain = (\n",
+    "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool_with_error_handling)\n",
+    ")\n",
+    "\n",
+    "# Test the updated chain with the required 'name' variable\n",
+    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\", \"name\": \"Fido\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fe19c1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
