--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
@@ -89,14 +89,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
+   "execution_count": 2,
+   "id": "45607dfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\joshu\\AppData\\Local\\Temp\\ipykernel_31908\\1427064109.py:3: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  model = Ollama(model=\"phi3\")\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
     "model = Ollama(model=\"phi3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f060d3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_ollama import OllamaLLM\n",
+    "\n",
+    "model = OllamaLLM(model=\"phi3\")"
    ]
   },
   {
@@ -111,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +189,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -247,11 +268,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
       "}\n"
      ]
     }
@@ -280,17 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +409,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +440,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +474,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,11 +504,89 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e0b460e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_ollama import OllamaLLM\n",
+    "from langchain_core.prompts import PromptTemplate, FewShotPromptTemplate\n",
+    "\n",
+    "examples = [\n",
+    "    {\"question\": \"What is 5 + 3?\", \"answer\": \"8\"},\n",
+    "    {\"question\": \"What is 12 × 4?\", \"answer\": \"48\"},\n",
+    "    {\"question\": \"What is 15 - 7?\", \"answer\": \"8\"},\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f1b6680e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the format for each example\n",
+    "example_prompt = PromptTemplate(\n",
+    "    input_variables=[\"question\", \"answer\"],\n",
+    "    template=\"Question: {question}\\nAnswer: {answer}\\n\"\n",
+    ")\n",
+    "\n",
+    "# Define the few-shot prompt template\n",
+    "few_shot_prompt = FewShotPromptTemplate(\n",
+    "    examples=examples,\n",
+    "    example_prompt=example_prompt,\n",
+    "    prefix=\"Solve the following math problems:\\n\",\n",
+    "    suffix=\"Now, solve this:\\nQuestion: {question}\\nAnswer:\",\n",
+    "    input_variables=[\"question\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b9797c58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the final prompt with a question\n",
+    "final_prompt = few_shot_prompt.format(question=\"3 × 1132\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "63df6665",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response: \n",
+      "To solve the multiplication problem presented in the new question, multiply 3 by 1132. The result is as follows:\n",
+      "\n",
+      "3 × 1132 = 3396\n",
+      "\n",
+      "So the answer to \"What is 3 multiplied by 1enzz?zzzz?\" would be: 3396\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Invoke the model\n",
+    "response = model.invoke(final_prompt)\n",
+    "\n",
+    "# Print result\n",
+    "print(\"Response:\", response)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
