--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -483,6 +483,62 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e499030-e247-404a-9e6f-80ca85067055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "from typing import Union, List\n",
+    "\n",
+    "@tool\n",
+    "def divide(x: float, y: float) -> float:\n",
+    "    \"\"\"Divide first number by second number.\"\"\"\n",
+    "    if y == 0:\n",
+    "        raise ValueError(\"Cannot divide by zero\")\n",
+    "    return x / y\n",
+    "\n",
+    "@tool\n",
+    "def power(base: float, exponent: float) -> float:\n",
+    "    \"\"\"Raise base to the given exponent.\"\"\"\n",
+    "    return base ** exponent\n",
+    "\n",
+    "@tool\n",
+    "def average(numbers: List[float]) -> float:\n",
+    "    \"\"\"Calculate the average of a list of numbers.\"\"\"\n",
+    "    if not numbers:\n",
+    "        raise ValueError(\"List cannot be empty\")\n",
+    "    return sum(numbers) / len(numbers)\n",
+    "\n",
+    "# Modificación del prompt del sistema para incluir las nuevas herramientas\n",
+    "system_prompt = \"\"\"\n",
+    "You are an assistant that has access to the following set of tools:\n",
+    "{rendered_tools}\n",
+    "\n",
+    "Given the user input, determine which tool to use and provide the inputs.\n",
+    "Return your response as a JSON blob with 'name' and 'arguments' keys.\n",
+    "\n",
+    "Examples:\n",
+    "User: What's 10 divided by 2?\n",
+    "Assistant: {{\"name\": \"divide\", \"arguments\": {{\"x\": 10, \"y\": 2}}}}\n",
+    "\n",
+    "User: What's 2 to the power of 3?\n",
+    "Assistant: {{\"name\": \"power\", \"arguments\": {{\"base\": 2, \"exponent\": 3}}}}\n",
+    "\n",
+    "User: What's the average of 1, 2, and 3?\n",
+    "Assistant: {{\"name\": \"average\", \"arguments\": {{\"numbers\": [1, 2, 3]}}}}\n",
+    "\n",
+    "Remember:\n",
+    "1. Use the most appropriate tool for each calculation\n",
+    "2. Provide all required arguments in the correct format\n",
+    "3. Handle errors gracefully (e.g., division by zero)\n",
+    "\"\"\"\n",
+    "\n",
+    "tools = [divide, power, average]"
+   ]
   }
  ],
  "metadata": {
@@ -501,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
