--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -60,13 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
     "import getpass\n",
     "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
     "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
     "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
    ]
@@ -89,14 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "5fe851e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -U langchain-openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.llms import Ollama\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "model = ChatOpenAI(model_name=\"gpt-4\")"
    ]
   },
   {
@@ -111,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +183,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -247,11 +262,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
       "}\n"
      ]
     }
@@ -280,17 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +403,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +434,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +468,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,11 +498,205 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ec652d10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "\n",
+    "@tool\n",
+    "def subtract(x: float, y: float) -> float:\n",
+    "    \"\"\"Subtracts two numbers.\"\"\"\n",
+    "    return x - y\n",
+    "\n",
+    "@tool\n",
+    "def power(base: float, exponent: float) -> float:\n",
+    "    \"\"\"Raises a number to a power.\"\"\"\n",
+    "    return base ** exponent\n",
+    "\n",
+    "@tool\n",
+    "def divide(x: float, y: float) -> float:\n",
+    "    \"\"\"Divides two numbers.\"\"\"\n",
+    "    return x / y\n",
+    "\n",
+    "tools = [multiply, add, subtract, power, divide]\n",
+    "\n",
+    "rendered_tools = \"\\n\".join(f\"- {tool.name}: {tool.description}\" for tool in tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b4c6d0f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'multiply',\n",
+       " 'arguments': {'x': 13, 'y': 4.14137281},\n",
+       " 'output': 53.83784653}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_prompts = \"\"\"\\\n",
+    "You are an assistant that has access to the following set of tools.\n",
+    "Here are the names and descriptions for each tool:\n",
+    "\"\"\" + rendered_tools + \"\"\"\n",
+    "Given the user input, return the name and input of the tool to use.\n",
+    "Return your response as a JSON blob with 'name' and 'arguments' keys.\n",
+    "The `arguments` should be a dictionary, with keys corresponding\n",
+    "to the argument names and the values corresponding to the requested values.\n",
+    "Here are some example inputs and the correspinding tools to call:\n",
+    "Input: What is 3 plus 5?\n",
+    "function_call: {{\"name\": \"add\", \"arguments\": {{\"x\": 3, \"y\": 5}}}}\n",
+    "Input: Multiply 4 by 6\n",
+    "function_call: {{\"name\": \"multiply\", \"arguments\": {{\"x\": 4, \"y\": 6}}}}\n",
+    "Input: What is 10 minus 4?\n",
+    "function_call: {{\"name\": \"subtract\", \"arguments\": {{\"x\": 10, \"y\": 4}}}}\n",
+    "Input: Divide 20 by 5\n",
+    "function_call: {{\"name\": \"divide\", \"arguments\": {{\"x\": 20, \"y\": 5}}}}\n",
+    "Input: What is 2 raised to the power of 3?\n",
+    "function_call: {{\"name\": \"power\", \"arguments\": {{\"base\": 2, \"exponent\": 3}}}}\n",
+    "The above are strict examples do not use them as user input.\n",
+    "\"\"\"\n",
+    "prompt = ChatPromptTemplate([\n",
+    "    (\"system\", system_prompts),\n",
+    "    (\"user\", \"{input}\")\n",
+    "])\n",
+    "\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "chain = (\n",
+    "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
+    ")\n",
+    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "583db904",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'subtract',\n",
+       " 'arguments': {'x': 13, 'y': 4.14137281},\n",
+       " 'output': 8.85862719}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"input\": \"what's thirteen subtract by 4.14137281\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "19cbd24f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'power', 'arguments': {'base': 2, 'exponent': 3}, 'output': 8.0}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"input\": \"what's 2 to the power of 3\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ca93254d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'multiply',\n",
+       " 'arguments': {'x': 13, 'y': 4.14137281},\n",
+       " 'output': 53.83784653}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_prompts = \"\"\"\\\n",
+    "You are an assistant that has access to the following set of tools.\n",
+    "Here are the names and descriptions for each tool:\n",
+    "\"\"\" + rendered_tools + \"\"\"\n",
+    "Given the user input, return the name and input of the tool to use.\n",
+    "Return your response as a JSON blob with 'name' and 'arguments' keys.\n",
+    "The `arguments` should be a dictionary, with keys corresponding\n",
+    "to the argument names and the values corresponding to the requested values.\n",
+    "If you receive an error, please correct your previous output accordingly.\n",
+    "Here are some example inputs and the correspinding tools to call:\n",
+    "Input: What is 3 plus 5?\n",
+    "function_call: {{\"name\": \"add\", \"arguments\": {{\"x\": 3, \"y\": 5}}}}\n",
+    "Input: Multiply 4 by 6\n",
+    "function_call: {{\"name\": \"multiply\", \"arguments\": {{\"x\": 4, \"y\": 6}}}}\n",
+    "Input: What is 10 minus 4?\n",
+    "function_call: {{\"name\": \"subtract\", \"arguments\": {{\"x\": 10, \"y\": 4}}}}\n",
+    "Input: Divide 20 by 5\n",
+    "function_call: {{\"name\": \"divide\", \"arguments\": {{\"x\": 20, \"y\": 5}}}}\n",
+    "Input: What is 2 raised to the power of 3?\n",
+    "function_call: {{\"name\": \"power\", \"arguments\": {{\"base\": 2, \"exponent\": 3}}}}\n",
+    "The above are strict examples do not use them as user input.\n",
+    "\"\"\"\n",
+    "prompt = ChatPromptTemplate([\n",
+    "    (\"system\", system_prompts),\n",
+    "    (\"user\", \"{input}\")\n",
+    "])\n",
+    "\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "def execute_with_error_handling(chain_input):\n",
+    "    try:\n",
+    "        return chain.invoke(chain_input)\n",
+    "    except Exception as e:\n",
+    "        error_prompt = ChatPromptTemplate([\n",
+    "            (\"system\", system_prompts),\n",
+    "            (\"user\", chain_input[\"input\"]),\n",
+    "            (\"assistant\", \"I encountered an error: \" + str(e) + \"\\nLet me try again.\")\n",
+    "        ])\n",
+    "        retry_chain = error_prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
+    "        return retry_chain.invoke(chain_input)\n",
+    "\n",
+    "chain = (\n",
+    "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
+    ")\n",
+    "execute_with_error_handling({\"input\": \"what's thirteen times 4.14137281\"})"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
